Commit 7 CRUD clientes a traves de admin y login admin,A

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
       <div class="offcanvas-body ">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Inicio Sesion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="{% url "adminLogin" %}">Administrador</a>
           </li>
                     <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -45,10 +45,11 @@
       </div>
     </div>
     </nav>
-    <div class="container">
+    <div class="container col-8">
     {% block Contenido %}
     
     {% endblock Contenido %}
     </div>
+    
 </body>
 </html>
